data conversion in Spark working - geomesa not working

--- a/mac_installer/speedband.conf
+++ b/mac_installer/speedband.conf
@@ -19,6 +19,7 @@ geomesa {
         { name = start_longitude,     	type = Double }
 		{ name = end_latitude,      	type = Double }
         { name = end_longitude,     	type = Double }
+        { name = geom, type = Point, srid = 4326 }
       ]
     }
   }
@@ -36,7 +37,7 @@ geomesa {
         { name = speedband, 		transform = "$4::int" }
         { name = roadMinSpeed,  	transform = "$5::int" }
         { name = roadMaxSpeed,  	transform = "$6::int" }
-        { name = actual_date,   	transform = "dateHourMinuteSecondMillis($7)" }
+        { name = actual_date,   	transform = "date('yyyy-MM-dd HH:mm:ss', $7)" }
         { name = year,    			transform = "$8::int"}
         { name = month, 			transform = "$9::int" }
         { name = date, 				transform = "$10::int" }
@@ -46,6 +47,7 @@ geomesa {
         { name = start_longitude,   transform = "$14::double" }
 		{ name = end_latitude,      transform = "$15::double" }
         { name = end_longitude,     transform = "$16::double" }
+        { name = geom,          transform = "point($16::double, $15::double)" }
       ]
     }
   }
