data conversion working

--- a/mac_installer/speedband.conf
+++ b/mac_installer/speedband.conf
@@ -37,7 +37,7 @@ geomesa {
         { name = speedband, 		transform = "$4::int" }
         { name = roadMinSpeed,  	transform = "$5::int" }
         { name = roadMaxSpeed,  	transform = "$6::int" }
-        { name = actual_date,   	transform = "date('yyyy-MM-dd HH:mm:ss', $7)" }
+        { name = actual_date,   	transform = "date('yyyy-MM-dd HH:mm:ss.SSS', $7)" }
         { name = year,    			transform = "$8::int"}
         { name = month, 			transform = "$9::int" }
         { name = date, 				transform = "$10::int" }
